--- a/index.html
+++ b/index.html
@@ -54,34 +54,31 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="media/home-image.jpg" alt="" class="carousel-img"   aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <img src="media/pic.jpg" alt="" class="carousel-img"   aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
 
             <div class="container">
-              <div class="carousel-caption text-start">
+              <div class="carousel-caption ">
                 <h1>Example headline.</h1>
                 <p>Some representative placeholder content for the first slide of the carousel.</p>
-                <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="" alt=""class="carousel-img"  width="100%" height="100%" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <img src="media/esc.jpg" alt=""class="carousel-img"  width="100%" height="100%" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
             <div class="container">
               <div class="carousel-caption">
                 <h1>Another example headline.</h1>
                 <p>Some representative placeholder content for the second slide of the carousel.</p>
-                <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="" alt=""class="carousel-img"  width="100%" height="100%" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <img src="media/gm.jpg" alt=""class="carousel-img"  width="100%" height="100%" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
 
             <div class="container">
-              <div class="carousel-caption text-end">
+              <div class="carousel-caption ">
                 <h1>One more for good measure.</h1>
                 <p>Some representative placeholder content for the third slide of this carousel.</p>
-                <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
               </div>
             </div>
           </div>
@@ -109,7 +106,7 @@
             <a class="btn btn-secondary rounder-pill shadow"  href="#">Read More</a>
           </div>
           <div class="col-md-6 order-0 order-md-1">
-            <img src="" alt="" class="" height="80%" width="100%" loading="lazy">
+            <img src="media/fit.jpg" alt="" class="" height="80%" width="100%" loading="lazy">
           </div>
         </div>
       </div>
